Add expand contract to all windows.

--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1902,14 +1902,20 @@ ul.menu-bar li {
   border-radius: 3px;
 }
 
-.sample-details{
+/* Home page sample details when open */
+.sample-details {
   margin-top: -5px;
 }
-.sample-details .list-group .list-group-item{
+.sample-details .list-group .list-group-item {
     padding: 5px 8px;
     border: 0.2px solid #bfbfbf;
 }
-.sample-details .list-group.scroll-bar{
+.sample-details .list-group.scroll-bar {
     max-height: 140px;
     overflow-y: auto;
+}
+
+/* Expand contract individual boxes */
+.bar-control {
+  padding-left: 10px;
 }
