--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1918,3 +1918,12 @@ ul.menu-bar li {
 .bar-control {
   padding-left: 10px;
 }
+.comment{
+  background-color: #d7d7d7;
+  border-radius: 3px;
+  font-size: 12px;
+  /*padding: 9px 11px;*/
+  min-height: 60px;
+  max-height: 110px;
+  overflow-y: auto;
+}
