--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -910,6 +910,10 @@ h4, .h4, h5, .h5, h6, .h6 {
   outline: none;
 }
 
+.sidebar-list a.list-group-item i {
+  margin-left: 15px;
+}
+
 .sidebar-list a.list-group-item:focus {
   background-color: #4a5258;
   color: white;
