Add minimize and maximize.

--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1534,6 +1534,10 @@ label {
   background-color: #9fadbc;
 }
 
+.badge-white {
+  background-color: #ffffff;
+}
+
 .tab-active {
   color: white;
   font-style: normal;
