Move calendar and sideboard into the two columns. Add ability to show/hide any of the home page windows.

--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1567,8 +1567,9 @@ label {
   left: -12px;
 }
 
-.in-sideboard {
-  color: #800000;
+.activated {
+  /* color: #800000; */
+  color: #8b3a3a;
 }
 
 .tab-active {
