--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -869,6 +869,10 @@ h4, .h4, h5, .h5, h6, .h6 {
     padding-bottom: 6px;
 }
 
+.sidebar-list .list-group-item.disabled {
+    color: grey;
+}
+
 .sidebar-list .list-group-item:not(:first-child) {
     /* margin-left: 15px; */
     /* margin-right: 15px; */
