fixed creaetion of items into li and fixed buttons

--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1115,8 +1115,11 @@ h4, .h4, h5, .h5, h6, .h6 {
 
 .ta-scroll-window .ta-bind {
     padding: 6px 30px;
+    height: 150px;
 }
-
+.ta-scroll-window.form-control {
+    height: 150px;
+}
 .selected {
     background-color: lightgreen;
 }
@@ -1754,11 +1757,12 @@ ul.menu-bar li {
 /* **** Info Boxes **** */
 .info-box {
     background-color: white;
-    border: 2px solid #d0d0d0;
-    border-top-width: 4px;
+    border: 1px solid #d0d0d0;
+    /*border-top-width: 4px;*/
+    border-top: none;
     padding: 4px;
-    box-shadow: 8px 8px 1px -5px #d9d9da;
-    margin-bottom: 15px;
+    /*box-shadow: 8px 8px 1px -5px #d9d9da;*/
+    /*margin-bottom: 15px;*/
 }
 
 .info-box.scroll {
