--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1,3 +1,8 @@
+
+body{
+    font-size: 15px;
+    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+}
 /* **************** Bootstrap overrides ******************* */
 
 /***********Begin sideboard.html ***********/
@@ -715,6 +720,7 @@ h4, .h4, h5, .h5, h6, .h6 {
 .dropdown-menu > li a:hover,
 .dropdown-menu > li a:focus {
     background-color: #2c3e50;
+    color: #ffffff;
 }
 
 /*.modal-backdrop {*/
