--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -2011,3 +2011,9 @@ ul.menu-bar li {
 .progress {
   background-color: #c9c9c9;
 }
+.highlight_comment{
+    border: 2px solid  cornflowerblue;
+}
+.underline{
+    text-decoration: underline;
+}
