drag or add items functionality - still working

--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -2017,3 +2017,9 @@ ul.menu-bar li {
 .underline{
     text-decoration: underline;
 }
+
+/*style to remove the dotted line around the element*/
+input[type="radio"]:focus, input[type="checkbox"]:focus {
+    outline: none;
+}
+
