commit project length , filter, and font style : bugs fixed

--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1156,7 +1156,7 @@ a.important {
 a:hover,
 a:focus {
     text-decoration: underline;
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 
 table a, .table a {
