--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -960,9 +960,7 @@ h4, .h4, h5, .h5, h6, .h6 {
     background-color: #ffffff;
     border-top: none;
     border-bottom: none;
-    padding-left: 15px;
-    padding-top: 3px;
-    padding-bottom: 3px;
+    padding: 5px 15px;
 }
 
 .add-item {
