--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1036,7 +1036,7 @@ h4, .h4, h5, .h5, h6, .h6 {
 }
 
 .panel-heading.sideboard-color {
-    background-color: #256188;
+    background-color: #757575;
     opacity: .85;
 }
 
@@ -2017,4 +2017,12 @@ ul.menu-bar li {
 input[type="radio"]:focus, input[type="checkbox"]:focus {
     outline: none;
 }
+.fa-download{
+    color: #3ea7a0;
+}
+
+.fa-upload{
+    color: #e26a6a;
+}
+
 
