testing using production database: fixed issues

--- a/website/app/application/core/account/templates/templates.html
+++ b/website/app/application/core/account/templates/templates.html
@@ -1,4 +1,6 @@
 <div class="row" ng-controller="accountTemplates">
+    <p>  Note: By choosing templates below you will create your own preferred templates list.
+        During provenance creation, preferred templates will appear at the top of drop-down menu. </p>
     <br>
 
     <div class="col-lg-2">
