--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -949,7 +949,10 @@ h4, .h4, h5, .h5, h6, .h6 {
     border-top-width: 1px;
     border-bottom-color: #d1d1d1;
     border-top-color: #ffffff;
-    padding: 5px 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .home-panel-heading {
@@ -960,7 +963,9 @@ h4, .h4, h5, .h5, h6, .h6 {
     background-color: #ffffff;
     border-top: none;
     border-bottom: none;
-    padding: 5px 15px;
+    padding-left: 15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 .add-item {
