--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -1663,8 +1663,13 @@ label {
   left: -12px;
 }
 
-.inactive {
+.tool-inactive {
   color: #8e8e8e;
+}
+
+.tool-active {
+  color: white;
+  opacity: .85;
 }
 
 .tab-active {
@@ -2132,5 +2137,11 @@ input[type="checkbox"]:focus {
 }
 
 .loading-panel center h4 {
+  color: white;
+}
+
+/* task-bar */
+
+.task-bar-tool:hover {
   color: white;
 }
