--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-pair.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-pair.html
@@ -7,7 +7,7 @@
                     <div class="col-xs-6">
                         <input type="number"
                                class="form-control"
-                               id="attribut1"
+                               id="attribute1"
                                validator="required, numeric"
                                required-error-message="Invalid {{attribute1.name}}"
                                ng-model="attribute1.value">
