--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-sample.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-sample.html
@@ -1,12 +1,11 @@
 <div>
-    <div class="col-xs-offset-1"
-         ng-switch="control.edit">
+    <div ng-switch="control.edit">
         <div ng-switch-when="true">
             <form name="form" class="form-horizontal" novalidate>
                 <div class="form-group">
                     <label for="sampleName"
                            class="col-xs-3 control-label">
-                        Name
+                        Name <i class="fa fa-fw fa-asterisk text-danger"></i>
                     </label>
                     <div class="col-xs-6">
                         <input type="text"
@@ -16,10 +15,14 @@
                                autocomplete="off"
                                validate-unique-sample-name
                                validator-samples="[{name: 'hello'}]"
+                               required
                                ng-model="attr.name">
                         <span ng-show="form.name.$error.uniqueSampleName"
                               class="text-danger">
                             Sample name not unique
+                        </span>
+                        <span ng-show="form.name.$error.required" class="text-danger">
+                            You must supply a name
                         </span>
                         <span class="help-block">The name of the sample (must be unique for the project)</span>
                     </div>
@@ -51,6 +54,7 @@
                         <span class="help-block">Who you received the sample from, eg a vendor or another researcher</span>
                     </div>
                 </div>
+                <button class="btn btn-success" ng-disabled="form.$invalid">Done</button>
             </form>
         </div>
         <div ng-switch-default>
