--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-string.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-string.html
@@ -1,17 +1,29 @@
 <div>
-    <div class="col-xs-offset-1"
-         ng-switch="control.edit">
+    <div ng-switch="edit">
         <div ng-switch-when="true">
-            <input type="text" ng-model="attribute.value">
-            <br>
-            <a ng-click="done()">done</a>
+            <label class="col-xs-3 control-label" for="stringInput">
+                {{attribute.name}}
+                <i ng-if="attribute.required"
+                   class="fa fa-fw fa-asterisk text-danger"></i>
+            </label>
+            <div class="col-xs-6">
+                <input type="text"
+                       id="stringInput"
+                       class="form-control"
+                       name="stringInput"
+                       ng-required="attribute.required"
+                       ng-model="attribute.value">
+                <span ng-show="form.stringInput.$error.required" class="text-danger">
+                    You must supply a {{attribute.name}}.
+                </span>
+                <span class="help-block">
+                    {{attribute.description}}
+                </span>
+            </div>
         </div>
         <div ng-switch-default>
-            <span>
-                {{attribute.value}}
-            </span>
-            <br>
-            <a ng-click="control.edit = true; attribute.done = false">edit</a>
+            <dt>{{attribute.name}}</dt>
+            <dd>{{attribute.value}}</dd>
         </div>
     </div>
 </div>
