Handle showing the state and updating the done items.

--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-sample.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-sample.html
@@ -84,7 +84,7 @@
                             <dt>From</dt>
                             <dd>{{sample.from}}</dd>
                         </dl>
-                        <a ng-click="edit($index)">edit</done>
+                        <a ng-click="editEntry($index)">edit</done>
                     </div>
                 </div>
             </div>
