Work with recursive template definitions. Add additional templates to test out adding a new process.

--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-details.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-details.html
@@ -13,7 +13,9 @@
             </template-attribute-line>
         </div>
         <div ng-switch-when="date">
-            <template-attribute-date attribute="attribute" edit="edit" form="form">
+            <template-attribute-date attribute="attribute"
+                                     edit="edit"
+                                     form="form">
             </template-attribute-date>
         </div>
         <div ng-switch-when="list">
@@ -21,7 +23,9 @@
             </template-attribute-list>
         </div>
         <div ng-switch-when="number">
-            <template-attribute-number attribute="attribute" edit="edit">
+            <template-attribute-number attribute="attribute"
+                                       edit="edit"
+                                       form="form">
             </template-attribute-number>
         </div>
         <div ng-switch-when="pair">
@@ -29,7 +33,9 @@
             </template-attribute-pair>
         </div>
         <div ng-switch-when="string">
-            <template-attribute-string attribute="attribute" edit="edit" form="form">
+            <template-attribute-string attribute="attribute"
+                                       edit="edit"
+                                       form="form">
             </template-attribute-string>
         </div>
         <div ng-switch-when="template">
