--- a/website/app/application/core/components/templates/partials/attributes/template-attribute-number.html
+++ b/website/app/application/core/components/templates/partials/attributes/template-attribute-number.html
@@ -2,23 +2,38 @@
     <div class="col-xs-offset-1"
          ng-switch="control.edit">
         <div ng-switch-when="true">
-            <form name="attributeNumber">
-                <input type="number"
-                       validator="required, numeric"
-                       required-error-message="Invalid {{attribute.name}}"
-                       ng-model="attribute.value">
+            <label class="col-xs-3 control-label" for="numberInput">
+                {{attribute.name}}
+                <i ng-if="attribute.required"
+                   class="fa fa-fw fa-asterisk text-danger"></i>
+            </label>
+            <div class="col-xs-6">
+                <div class="col-xs-8">
+                    <input type="number"
+                           id="numberInput"
+                           step="any"
+                           class="form-control"
+                           ng-required="attribute.required"
+                           ng-model="attribute.value">
+                </div>
                 <span ng-if="attribute.unit !== ''">{{attribute.unit}}</span>
-                <br>
-                <a validation-submit="attributeNumber"
-                   ng-click="done()">
-                    Done
-                </a>
-            </form>
+                <span ng-show="form.numberInput.$error.required"
+                      class="text-danger">
+                    You must supply a {{attribute.name}}
+                </span>
+                <span class="help-block">
+                    {{attribute.description}}
+                </span>
+            </div>
         </div>
         <div ng-switch-default>
-            <span>{{attribute.value}}{{attribute.unit}}</span>
-            <br>
-            <a ng-click="control.edit = true; attribute.done = false">edit</a>
+            <dt>{{attribute.name}}</dt>
+            <dd>
+                <span ng-if="attribute.value">
+                    {{attribute.value}}
+                    <span ng-if="attribute.unit !== ''">{{attribute.unit}}</span>
+                </span>
+            </dd>
         </div>
     </div>
 </div>
